replaced error pages
replaced error pages with dave's custom ones

--- a/public/403.html
+++ b/public/403.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>404 | Page not found.</title>
+  <title>403 | Permission Denied.</title>
 
   <style type="text/css">
     html {
@@ -113,13 +113,11 @@
   </div>
 </header>
 <div class="container">
-  <h2>404</h2>
-  <h3>Page not found.</h3>
+  <h2>403</h2>
+  <h3>Permission Denied.</h3>
 
   <p class="align-center"> 
-    Well this is <strong> embarrassing </strong>. We couldn't find the page you were trying to access. Usually this occurs because of a page that previously existed was removed or you’ve mistyped the address. Please double check the URL to make sure there are no typos or perhaps try searching for the page or file via <a href="https://www.google.com"> Google </a>.
-    <br/><br/>
-    If you still can't find it, we would love to help fix the problem. Email <a href="mailto:libdev@mail.wvu.edu"> libdev@mail.wvu.edu </a> for help, and please include the URL of the page you were looking for, the type of devise, and web browser.
+    You have been denied access to this page.  This could be because of lack of permission, invalid IP, poorly configured VPN, or for other security reasons.  If you have reached this in error please email <a href="mailto:libdev@mail.wvu.edu">libdev@mail.wvu.edu</a> for help.  Thank you and have a great day!  
   </p>
 
   <span class="go-back"><a href="/"> Back to App </a></span>
