--- a/public/500.html
+++ b/public/500.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>500 | Soemthing went wrong.</title>
+  <title>500 | Something went wrong.</title>
 
   <style type="text/css">
     html {
